<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".DetailFragment">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textIsSelectable="true"
        android:textSize="34sp"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/synonyms_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/fab_margin"
        android:paddingBottom="@dimen/fab_margin"
        android:textIsSelectable="true"
        tools:ignore="SpeakableTextPresentCheck" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/nvs_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nvs_code" />

            <TextView
                android:id="@+id/nvs_field"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textIsSelectable="true"
                tools:ignore="SpeakableTextPresentCheck" />
        </TableRow>

        <!--            <TableRow-->
        <!--                android:layout_width="match_parent"-->
        <!--                android:layout_height="match_parent" >-->

        <!--&lt;!&ndash;                <TextView&ndash;&gt;-->
        <!--&lt;!&ndash;                    android:id="@+id/species_name_label"&ndash;&gt;-->
        <!--&lt;!&ndash;                    android:layout_width="0dp"&ndash;&gt;-->
        <!--&lt;!&ndash;                    android:layout_height="wrap_content"&ndash;&gt;-->
        <!--&lt;!&ndash;                    android:layout_weight="1"&ndash;&gt;-->
        <!--&lt;!&ndash;                    android:text="Species Name" />&ndash;&gt;-->

        <!--&lt;!&ndash;                <TextView&ndash;&gt;-->
        <!--&lt;!&ndash;                    android:id="@+id/species_name"&ndash;&gt;-->
        <!--&lt;!&ndash;                    android:layout_width="0dp"&ndash;&gt;-->
        <!--&lt;!&ndash;                    android:layout_height="wrap_content"&ndash;&gt;-->
        <!--&lt;!&ndash;                    android:layout_weight="1"&ndash;&gt;-->
        <!--&lt;!&ndash;                    android:text="" />&ndash;&gt;-->
        <!--            </TableRow>-->

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/family_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/family" />

            <TextView
                android:id="@+id/family_field"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textIsSelectable="true"
                tools:ignore="SpeakableTextPresentCheck" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/genus_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/genus" />

            <TextView
                android:id="@+id/genus_field"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textIsSelectable="true"
                tools:ignore="SpeakableTextPresentCheck" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/species_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/species" />

            <TextView
                android:id="@+id/species_field"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textIsSelectable="true"
                tools:ignore="SpeakableTextPresentCheck" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/flora_category_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/flora_category" />

            <TextView
                android:id="@+id/flora_category_field"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textIsSelectable="true"
                tools:ignore="SpeakableTextPresentCheck" />
        </TableRow>

        <!--            <TableRow-->
        <!--                android:layout_width="match_parent"-->
        <!--                android:layout_height="match_parent" >-->

        <!--                <TextView-->
        <!--                    android:id="@+id/textView18"-->
        <!--                    android:layout_width="0dp"-->
        <!--                    android:layout_height="wrap_content"-->
        <!--                    android:layout_weight="1"-->
        <!--                    android:text="TextView" />-->

        <!--                <TextView-->
        <!--                    android:id="@+id/textView19"-->
        <!--                    android:layout_width="0dp"-->
        <!--                    android:layout_height="wrap_content"-->
        <!--                    android:layout_weight="1"-->
        <!--                    android:text="TextView" />-->
        <!--            </TableRow>-->

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/growth_form_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/growth_form" />

            <TextView
                android:id="@+id/growth_form_field"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textIsSelectable="true"
                tools:ignore="SpeakableTextPresentCheck" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/threatened_status_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/threatened_status" />

            <TextView
                android:id="@+id/threatened_status_field"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textIsSelectable="true"
                tools:ignore="SpeakableTextPresentCheck" />
        </TableRow>
    </TableLayout>

</LinearLayout>